# subsample-reads

./: .gitignore  HG002.hs37d5.300x.HLA-A.bam  HG002.hs37d5.300x.HLA-A.bam.bai  LICENSE  Makefile  README.md  hla-a-region.bed  prototype.ipynb  pyproject.toml  requirements.txt
benchmarks/: gatk-constant-memory.sh  gatk-highaccuracy.sh  multi-interval-benchmark.bed  multi-interval-benchmark.sh  multi-interval-benchmark.txt  sambamba.sh  samtools.sh  single-interval-benchmark-times.txt  single-interval-benchmark.bed  single-interval-benchmark.sh
examples/: algo_demo.py  example-prg.bed  example.bed  make_example.py  make_example_map.py  make_example_map_prg.py  make_example_prg.py
lib/: BAMcharter.py  BAMloader.py  BAMplotter.py  BEDloader.py  Intervals.py  SubsampleBAM.py  __main__.py
publication/: download-files.sh  figure-1.sh
subsample-reads/: BAMcharter.py  BAMloader.py  BAMplotter.py  Intervals.py  __main__.py
subsample_reads/: BAMcharter.py  BAMloader.py  BAMplotter.py  Comparator.py  FileHandler.py  Intervals.py  Loader.py  Mapper.py  Plotter.py  Subsampler.py  __init__.py  __main__.py
tests/: HG00157-100-mapped-reads.bam  HG00157-HLA-sorted-test.bed  contigs-not-unique.bed  fractions-outside-expected-interval.bed  not-sums-to-oneish.bed  not-unique.bed  overlapping-intervals.bed  test-contigs-not-unique.bed  test-dataframe-dimensions.bed  test-overlapping-intervals.bed  test_BAMloader.py  test_BEDloader.py  test_Comparator.py  test_FileHandler.py  test_Intervals.py  test_Loader.py  test_Mapper.py  test_Plotter.py  wrong-fractions.bed
